# flurry

./: .gitignore  Doxyfile  LICENSE  README.md  environment.yml  host.py  main.py  networkhost.py  pyproject.toml  setup.py  sysdigclient.py  webserver.py
config/: cfg.txt  cfg2.txt  netcfg.txt
install/: sysdig.sh
machines/: flurryscada.py  flurryscience.py  flurrysdn.py  flurryuser.py  flurryweb.py  host.py
prov/: database.py  graph.py  output.py  provenance.py  queries.py
samplegraphs/: stats_attack_backdoor_1.txt  stats_attack_bruteforce_1.txt  stats_attack_commandinjection_1.txt  stats_attack_dataexfiltration_1.txt  stats_attack_sqlinjection_1.txt  stats_attack_synflood_1.txt  stats_attack_xssdom_1.txt  stats_attack_xssreflected_1.txt  stats_attack_xssstored_1.txt  stats_benign_backdoor_1.txt  stats_benign_bruteforce_1.txt  stats_benign_commandinjection_1.txt  stats_benign_dataexfiltration_1.txt  stats_benign_sqlinjection_1.txt  stats_benign_synflood_1.txt  stats_benign_xssdom_1.txt  stats_benign_xssreflected_1.txt  stats_benign_xssstored_1.txt
sandbox/: autodvwa.sh  autonetbot.sh
scripts/: 100-password-list.txt  backdoor.py  bruteforce.py  bruteforce.sh  commandinjection.py  commandlineping.py  credit_card_info.txt  custom1.py  databaseentry.py  dataexfil.py  fileread.py  localexec.py  messageboard.py  pagequery.py  ping.py  questionnaire.py  rec_attack.sh  singlelogin.py  sqlinjection.py  synflood.py  xssdom.py  xssreflected.py  xssstored.py
test/: allscenarios.sh  allscriptcfg.txt  allscriptnetcfg.txt
util/: alerthandling.py  driversetup.py  (+1 more)
(+49 files in other folders)
